Fix footer email positioning on mobile

--- a/_sass/widgets/_footer.scss
+++ b/_sass/widgets/_footer.scss
@@ -113,6 +113,7 @@ main, header, nav, footer > article {
 
 	#contact .facebook,
 	#contact .irc,
+	#contact .email,
 	#contact .sourceforge {
 		top: 0px;
 	}
